--- a/georgienewson/index.html
+++ b/georgienewson/index.html
@@ -72,7 +72,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="two" class="wrapper style2 spotlights">
 						<div class="inner">
 							<h2>Writing:</h2>
 							<p><p style="font-size: 16px"><a href="https://literaryreview.co.uk/x-marks-the-spot-2">‘X Marks the Spot’</a>, <i>Literary Review</i>. Review of Jeff VanderMeer’s <i>Absolution</i>. A shortened version of <a href="AbsolutionReview.pdf" target="_blank">this piece</a>.
